# ThermalPaint

./: README.md  calibration.py  thermalPaint.py
Hardware/: Readme.md
Hardware/3d_model/: camera_mount.f3d  camera_mount.step  sensor_mount.f3d  sensor_mount.step
Hardware/assets/: Xiao-BendLabs.drawio
ThermalPaint/: parameters.csv  pyproject.toml
ThermalPaint/Bend_BLE/: Bend_BLE.ino
ThermalPaint/Blink_copy_20260305180906/: Blink_copy_20260305180906.ino
ThermalPaint/data/: parameters.csv
ThermalPaint/dual_bend_sensors_serial_send/: dual_bend_sensors_serial_send.ino
ThermalPaint/src/thermalpaint/: __init__.py  calibration.py  config.py  flex_reader.py  hardware.py  parameters.csv  utils.py
