[project]
authors = [{name = "sosucat", email = "pengu1n.i843@gmail.com"}]
dependencies = ["dicot>=0.1.0,<0.2"]
name = "ThermalPaint"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
thermalpaint = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.2,<3.15"
py-opencv = ">=4.13.0,<5"
keyboard = ">=0.13.5,<0.14"
pyserial = ">=3.5,<4"
